--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7"
 CUDA = "4"
-ClimaComms = "0.4"
+ClimaComms = "0.4, 0.5"
 ClimaCore = "0.10"
 ClimaTimeSteppers = "0.7"
 CloudMicrophysics = "0.10"
