add subgrid scale mass flux for diagnostic edmf

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -453,7 +453,7 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_bomex_box
           --initial_condition Bomex --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex --surface_setup Bomex
-          --turbconv diagnostic_edmfx --edmfx_entr_detr true
+          --turbconv diagnostic_edmfx --edmfx_entr_detr true --edmfx_sgs_flux true
           --moist equil --vert_diff true --C_E 0.044
           --config box --hyperdiff true --kappa_4 1e12
           --x_max 1e5 --y_max 1e5 --x_elem 2 --y_elem 2 --z_elem 60 --z_max 3e3 --z_stretch false
