add nonhydrostatic pressure drag to diagnostic edmf

--- a/config/model_configs/diagnostic_edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/diagnostic_edmfx_dycoms_rf01_box.yml
@@ -8,6 +8,7 @@ turbconv: diagnostic_edmfx
 prognostic_tke: true
 edmfx_upwinding: first_order 
 edmfx_entr_detr: true 
+edmfx_nh_pressure: true 
 edmfx_sgs_flux: true
 moist: equil
 config: box 
