--- a/config/model_configs/diagnostic_edmfx_aquaplanet_tke.yml
+++ b/config/model_configs/diagnostic_edmfx_aquaplanet_tke.yml
@@ -6,9 +6,10 @@ turbconv: diagnostic_edmfx
 prognostic_tke: true
 edmfx_upwinding: first_order 
 edmfx_entr_detr: true 
+edmfx_nh_pressure: true 
 edmfx_sgs_flux: true
 moist: equil 
 precip_model: 0M
-dt: 100secs 
+dt: 50secs 
 t_end: 3hours 
 dt_save_to_disk: 600secs
