Update RRTMGP compat

--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -72,7 +72,7 @@ BlockArrays = "0.16"
 CLIMAParameters = "0.7"
 CUDA = "4"
 CairoMakie = "0.10"
-ClimaComms = "0.4"
+ClimaComms = "0.5"
 ClimaCore = "0.10"
 ClimaCoreMakie = "0.3"
 ClimaCorePlots = "0.2"
@@ -108,7 +108,7 @@ PoissonRandom = "0.4"
 PrettyTables = "1, 2"
 ProgressLogging = "0.1"
 QuadGK = "2"
-RRTMGP = "0.7, 0.8"
+RRTMGP = "0.9"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "1"
