--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -90,7 +90,7 @@ OrderedCollections = "1"
 OrdinaryDiffEq = "5, 6"
 PoissonRandom = "0.4"
 PrettyTables = "1, 2"
-RRTMGP = "0.7, 0.8"
+RRTMGP = "0.9"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "1"
 StaticArrays = "1"
