--- a/test/Project.toml
+++ b/test/Project.toml
@@ -75,7 +75,7 @@ AtmosphericProfilesLibrary = "0.1"
 BlockArrays = "0.16"
 CLIMAParameters = "0.7"
 CUDA = "4"
-ClimaComms = "0.4"
+ClimaComms = "0.5"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
@@ -104,7 +104,7 @@ PoissonRandom = "0.4"
 PrettyTables = "1, 2"
 ProgressLogging = "0.1"
 QuadGK = "2"
-RRTMGP = "0.7, 0.8"
+RRTMGP = "0.9"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
