Add implicit gpu perf elem scaling script

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -808,6 +808,15 @@ steps:
         agents:
           slurm_gpus: 1
 
+      - label: "Perf: GPU implicit baro wave wrt h_elem"
+        key: "gpu_implicit_barowave_wrt_h_elem"
+        command:
+          - "julia --project -e 'using CUDA; CUDA.versioninfo()'"
+          - "nsys profile --trace=nvtx,cuda --output=gpu_implicit_barowave_wrt_h_elem/report julia --color=yes --project=examples perf/benchmark_dump.jl --job_id gpu_implicit_barowave_wrt_h_elem --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf --device CUDADevice"
+        artifact_paths: "gpu_implicit_barowave_wrt_h_elem/*"
+        agents:
+          slurm_gpus: 1
+
       - label: "Perf: CPU explicit baro wave"
         key: "cpu_explicit_barowave"
         command: "nsys profile --trace=nvtx,cuda --output=cpu_explicit_barowave/report julia --color=yes --project=examples examples/hybrid/driver.jl --job_id cpu_explicit_barowave --ode_algo SSP33ShuOsher --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf --device CPUSingleThreaded"
